# networks-course

lab01/: lab01.md
lab02/: .gitignore  Makefile  flake.nix  lab02.md
lab02/src/: main.cpp
lab03/: .gitignore  README.md  flake.nix  lab03.md
lab03/client/: CMakeLists.txt  main.cpp
lab03/server/: CMakeLists.txt  main.cpp
lab04/: lab04.md
lab04/pcap/: taskc.pcapng  taskd.pcapng
lab05/: .gitignore  README.md  flake.nix  lab05.md
lab05/broadcasted_clock/: CMakeLists.txt  client.cpp  server.cpp
lab05/distribution_graphics/: client-server.gpi  peer2peer.gpi
lab05/remote_shell/: CMakeLists.txt  client.cpp  common.h  server.cpp
lab06/: .gitignore  flake.nix  lab06.md
lab06/ftp-cpp-client/: CMakeLists.txt  README.txt  ftp_client.cpp
lab07/: dump.pcapng  lab07.md
lab08/: .gitignore  CMakeLists.txt  example.txt  flake.nix  lab08.md
lab08/checksum/: CMakeLists.txt  checksum.cpp
lab08/client/: CMakeLists.txt  client.cpp
lab08/include/: connection.h
lab08/server/: CMakeLists.txt  server.cpp
lab09/: explore  lab09.md  whoami
lab09/dumps/: 1.pcapng  2.pcapng
lab10/: 3500-trace.pcapng  56-trace.pcapng  lab10.md
lab11/: flake.nix  lab11.md  traceroute.py
lab12/: .gitignore  flake.nix  lab12.md
lab12/rip/: CMakeLists.txt  channel.h  main.cpp
lab13/: dhcp.pcapng  flake.nix  lab13.md
lab13/crc/: CMakeLists.txt  main.cpp
lab14/: arp.pcapng  ether.pcapng  lab14.md
